<?xml version="1.0"?>
<package format="3">
  <name>minimal_ros2_example_msgs</name>
  <version>1.0.0</version>
  <description>Minimal ROS2 example msgs</description>

  <maintainer email="ignigomoreno@gmail.com.com">Iñigo Moreno</maintainer>

  <license>??</license>

  <author email="inigo.moreno@tecnalia.com">Iñigo Moreno</author>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>std_msgs</exec_depend>

  <build_depend>rosidl_default_generators</build_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>
  <member_of_group>rosidl_interface_packages</member_of_group>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>